[package]
name = "rinfluxdb-dataframe"
version = "0.2.0-pre"
repository = "https://gitlab.com/claudiomattera/rinfluxdb"
authors = ["Claudio Mattera <dev@claudiomattera.it>"]
description = "A library for querying and posting data to InfluxDB"
edition = "2018"
license = "MIT OR Apache-2.0"
readme = "Readme.md"
exclude = [
    ".drone.yml",
]
keywords = [
    "influxdb",
    "timeseries",
]
categories = [
    "database",
]


[lib]
name = "rinfluxdb_dataframe"
path = "src/lib.rs"

[dependencies]
rinfluxdb-types = { version = "=0.2.0-pre", path = "../rinfluxdb-types" }

chrono = "0.4"
