[package]
name = "rinfluxdb-polars"
version = "0.2.0"
repository = "https://gitlab.com/claudiomattera/rinfluxdb"
authors = ["Claudio Mattera <dev@claudiomattera.it>"]
description = "A library for querying and posting data to InfluxDB"
edition = "2018"
license = "MIT OR Apache-2.0"
readme = "Readme.md"
exclude = [
    ".drone.yml",
]
keywords = [
    "influxdb",
    "timeseries",
]
categories = [
    "database",
]


[lib]
name = "rinfluxdb_polars"
path = "src/lib.rs"

[dependencies]
rinfluxdb-types = { version = "=0.2.0", path = "../rinfluxdb-types" }
polars = { version = "0.16", features = ["dtype-u64"] }

chrono = "0.4"
